--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -389,7 +389,7 @@
         Height: =50
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-        OnSelect: |+
+        OnSelect: |-
             =UpdateContext({
                 journalJsonData:
                 JSON(
@@ -425,8 +425,9 @@
                 )
             });
             
-            If(!isCreated,UpdateXML.Run(journalJsonData, file_Name, "ReadyForProcessing"));
+            If(!isCreated,UpdateXML.Run(journalJsonData, SelectedFile, SelectedFolder, temeljniceReadyForNavCheckbox.Checked));
             
+            Navigate(scrEntry,ScreenTransition.Fade);
         Size: =15
         Text: ="Save"
         Width: =225
