--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -480,7 +480,9 @@
                 )
             });
             
-            If(!isCreated,UpdateXML.Run(warehouseJsonData, file_Name, "ReadyForProcessing"));
+            If(!isCreated,UpdateXML.Run(warehouseJsonData, SelectedFile, SelectedFolder,primkeReadyForNavCheckbox.Checked));
+            
+            Navigate(scrEntry,ScreenTransition.Fade);
         Size: =15
         Text: ="Save"
         Width: =225
