--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -1208,7 +1208,9 @@
                         ZIndex: =3
 
                     ButtonCanvas1 As Button:
+                        BasePaletteColor: =
                         DisplayMode: =DisplayMode.Edit
+                        FontColor: =
                         Height: =32
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
