--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -539,6 +539,15 @@
                     Y: =122
                     ZIndex: =11
 
+                TextCanvas1 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    Text: =status
+                    Width: =96
+                    X: =60
+                    Y: =60
+                    ZIndex: =24
+
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
@@ -1110,7 +1119,7 @@
             
             Set(response, UpdateXML.Run(purchaseJsonData, SelectedFile, SelectedFolder, nabavniNalogReadyForNavCheckbox.Checked));
             
-            
+            Set(status, ParseJSON(response.response).Status);
             
             Navigate(scrEntry,ScreenTransition.Fade);
             
