--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -1112,7 +1112,7 @@
             
             //Navigate(scrEntry,ScreenTransition.Fade);
             
-            //Notify(responseMessage,NotificationType.Success,2000);
+            Notify(responseMessage.response ,NotificationType.Success,2000);
             
         Size: =15
         Text: ="Save"
