--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -1110,11 +1110,11 @@
             
             UpdateContext({responseMessage: UpdateXML.Run(purchaseJsonData, SelectedFile, SelectedFolder, nabavniNalogReadyForNavCheckbox.Checked)});
             
-            UpdateContext({parsedResponse : ParseJSON(responseMessage)});
+            UpdateContext({parsedResponse : ParseJSON(responseMessage.response)});
             
             Navigate(scrEntry,ScreenTransition.Fade);
             
-            Notify(responseMessage.response ,NotificationType.Success,2000);
+            Notify(parsedResponse.Message , If(parsedResponse.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
             
         Size: =15
         Text: ="Save"
