--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -3,6 +3,7 @@
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnVisible: |-
         =Reset(nalogZaPrenosReadyForNavCheckbox);
+        Set(sel, First(Filter(colTransferLines, ThisRecord.Line_No = "30000")));
         If(!IsBlank(SelectedFile),
         IfError(GetXML_Nalog_Za_Prenos.Run(SelectedFile,SelectedFolder),
             Notify(
@@ -165,6 +166,7 @@
                 "TransferLineGallery As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
                     BorderColor: =RGBA(89, 0, 0, 1)
                     BorderThickness: =0.5
+                    Default: =sel
                     DelayItemLoading: =true
                     Height: =375
                     Items: =colTransferLines
