--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -1219,6 +1219,15 @@
                     Y: =122
                     ZIndex: =11
 
+                TextCanvas2 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =32
+                    Text: =sel.Line_No
+                    Width: =376
+                    X: =347
+                    Y: =119
+                    ZIndex: =24
+
                 Group22 As group:
                     Height: =5
                     Width: =5
