--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -123,6 +123,8 @@
                 "PurchaseItemsGallery As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
                     BorderColor: =RGBA(89, 0, 0, 1)
                     BorderThickness: =0.5
+                    Default: |
+                        =First(Filter(colPurchaseLines, ThisRecord.Line_No = scannedItem))
                     DelayItemLoading: =true
                     Height: =375
                     Items: =colPurchaseLines
@@ -857,8 +859,10 @@
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
                 OnSelect: |-
-                    =ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
-                    Reset(nabavniNalogReadyForNavCheckbox);
+                    =/*ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
+                    Reset(nabavniNalogReadyForNavCheckbox);*/
+                    
+                    Set(scannedItem,20000);
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
