--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -862,7 +862,7 @@
                     =/*ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
                     Reset(nabavniNalogReadyForNavCheckbox);*/
                     
-                    Set(scannedItem,20000);
+                    Set(scannedItem, "20000");
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
