--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -541,6 +541,15 @@
                     Y: =122
                     ZIndex: =11
 
+                TextCanvas3 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =43
+                    Text: =scannedItem
+                    Width: =334
+                    X: =428
+                    Y: =115
+                    ZIndex: =24
+
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
