--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -871,7 +871,7 @@
                     =/*ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
                     Reset(nabavniNalogReadyForNavCheckbox);*/
                     
-                    Set(scannedItem, "20000");
+                    UpdateContext({scannedItem: "20000"});
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
