--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -124,7 +124,7 @@
                     BorderColor: =RGBA(89, 0, 0, 1)
                     BorderThickness: =0.5
                     Default: |
-                        =First(Filter(colPurchaseLines, ThisRecord.Line_No = scannedItem))
+                        =First(Filter(colPurchaseLines, ThisRecord.Line_No = Text(scannedItem)))
                     DelayItemLoading: =true
                     Height: =375
                     Items: =colPurchaseLines
@@ -541,15 +541,6 @@
                     Y: =122
                     ZIndex: =11
 
-                TextCanvas3 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =43
-                    Text: =scannedItem
-                    Width: =334
-                    X: =428
-                    Y: =115
-                    ZIndex: =24
-
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
@@ -867,11 +858,9 @@
                 Height: =50
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                OnSelect: |-
-                    =/*ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
-                    Reset(nabavniNalogReadyForNavCheckbox);*/
-                    
-                    UpdateContext({scannedItem: "20000"});
+                OnSelect: |
+                    =ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
+                    Reset(nabavniNalogReadyForNavCheckbox);
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
