--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -859,9 +859,11 @@
                 Height: =50
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-                OnSelect: |
+                OnSelect: |-
                     =ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
                     Reset(nabavniNalogReadyForNavCheckbox);
+                    
+                    UpdateContext({scannedItem:"20000"})
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
