--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -604,19 +604,17 @@ scr_XMLOtpremnice As screen:
                             Y: =0
                             ZIndex: =2
 
-                    "glr_Lines As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
+                    "glr_Lines As gallery.'BrowseLayout_Vertical_TwoTextVariant_ver5.0'":
                         BorderColor: =RGBA(89, 0, 0, 1)
                         DelayItemLoading: =true
                         Items: =Otpremnice.Warehouse_Shipment_Line
                         Layout: =Layout.Vertical
-                        LayoutMinHeight: =287
-                        LayoutMinWidth: =320
                         LoadingSpinner: =LoadingSpinner.Data
                         TemplatePadding: =0
-                        TemplateSize: =80
-                        ZIndex: =3
+                        TemplateSize: =90
+                        ZIndex: =1
 
-                        Title2 As label:
+                        Title1 As label:
                             Color: =RGBA(50, 49, 48, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
@@ -626,14 +624,32 @@ scr_XMLOtpremnice As screen:
                             PaddingLeft: =0
                             PaddingRight: =0
                             PaddingTop: =0
-                            Text: =ThisItem.Line_No
+                            Text: =ThisItem.Description
                             VerticalAlign: =VerticalAlign.Top
                             Width: =Parent.TemplateWidth - 86
                             X: =16
-                            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                            Y: =(Parent.TemplateHeight - (Self.Size * 1.8 + Subtitle1.Size * 1.8)) / 2
                             ZIndex: =1
 
-                        NextArrow2 As icon.ChevronRight:
+                        Subtitle1 As label:
+                            Color: =RGBA(0, 0, 0, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                            Height: =Self.Size * 1.8
+                            OnSelect: =Select(Parent)
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =12
+                            Text: =ThisItem.Line_No
+                            VerticalAlign: =VerticalAlign.Top
+                            Width: =Title1.Width
+                            X: =Title1.X
+                            Y: =Title1.Y + Title1.Height
+                            ZIndex: =2
+
+                        NextArrow1 As icon.ChevronRight:
                             AccessibleLabel: =Self.Tooltip
                             BorderColor: =RGBA(89, 0, 0, 1)
                             Color: =RGBA(166, 166, 166, 1)
@@ -644,33 +660,33 @@ scr_XMLOtpremnice As screen:
                             OnSelect: |
                                 =Select(Parent);
                                 UpdateContext({wizardStep: 2});
-                            PaddingBottom: =12
-                            PaddingLeft: =12
-                            PaddingRight: =12
-                            PaddingTop: =12
+                            PaddingBottom: =16
+                            PaddingLeft: =16
+                            PaddingRight: =16
+                            PaddingTop: =16
                             Tooltip: ="View item details"
                             Width: =50
                             X: =Parent.TemplateWidth - Self.Width - 12
                             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-                            ZIndex: =2
+                            ZIndex: =3
 
-                        Separator3 As rectangle:
+                        Separator2 As rectangle:
                             BorderColor: =RGBA(89, 0, 0, 1)
                             Fill: =RGBA(255, 255, 255, 1)
                             Height: =8
                             OnSelect: =Select(Parent)
                             Width: =Parent.TemplateWidth
                             Y: =Parent.TemplateHeight - Self.Height
-                            ZIndex: =3
+                            ZIndex: =4
 
-                        Rectangle3 As rectangle:
+                        Rectangle2 As rectangle:
                             BorderColor: =RGBA(89, 0, 0, 1)
                             Fill: =RGBA(89, 0, 0, 1)
-                            Height: =Parent.TemplateHeight - Separator3.Height
+                            Height: =Parent.TemplateHeight - Separator2.Height
                             OnSelect: =Select(Parent)
                             Visible: =ThisItem.IsSelected
                             Width: =4
-                            ZIndex: =4
+                            ZIndex: =5
 
                 vrt_ResEntries As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
