--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -906,7 +906,7 @@
                 PressedBorderColor: =RGBA(189, 49, 51, 1)
                 PressedContentColor: =RGBA(189, 49, 51, 1)
                 PressedFillColor: =RGBA(255, 255, 255, 1)
-                ScanningMode: ='BarcodeReader.ScanningMode'.AutomaticallyScan
+                ScanningMode: ='BarcodeReader.ScanningMode'.SelectToScan
                 Text: ="Scan"
                 TextColor: =RGBA(255, 255, 255, 1)
                 Width: =100
