--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -1216,6 +1216,7 @@
                         LayoutMinWidth: =96
                         OnSelect: |
                             =UpdateContext({flowOutputs: GetAll.Run(warehouseCode)});
+                        Visible: =false
                         Width: =96
                         X: =0
                         Y: =0
