--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -159,6 +159,9 @@
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
+                    LayoutOverflowX: =LayoutOverflow.Scroll
+                    LayoutOverflowY: =LayoutOverflow.Scroll
+                    LayoutWrap: =true
                     PaddingBottom: =10
                     PaddingLeft: =10
                     PaddingRight: =10
@@ -167,6 +170,7 @@
                     RadiusBottomRight: =4
                     RadiusTopLeft: =4
                     RadiusTopRight: =4
+                    Width: =Parent.Width
                     ZIndex: =2
 
                     con_Status As groupContainer.manualLayoutContainer:
@@ -179,7 +183,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 3, Parent.Width)
+                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width)
                         ZIndex: =1
 
                         dd_Status As Dropdown.pcfdataset:
@@ -239,7 +243,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 3, Parent.Width)
+                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width)
                         ZIndex: =2
 
                         dd_FileType As Dropdown.pcfdataset:
@@ -394,7 +398,7 @@
                         PaddingLeft: =5
                         PaddingRight: =5
                         PaddingTop: =5
-                        Width: =If(App.Width > 600, Parent.Width / 3, Parent.Width)
+                        Width: =32
                         ZIndex: =3
 
                     ButtonCanvas1 As Button:
