--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -181,7 +181,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 2,  Parent.Width - 52)
+                        Width: =If(App.Width > 600, Parent.Width / 2,  Parent.Width /2)
                         ZIndex: =1
 
                         dd_Status As Dropdown.pcfdataset:
@@ -241,7 +241,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width)
+                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width/2)
                         ZIndex: =2
 
                         dd_FileType As Dropdown.pcfdataset:
