--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -151,7 +151,6 @@
                 ZIndex: =7
 
                 hrzcon_GetAllFilesDDs As groupContainer.horizontalAutoLayoutContainer:
-                    AlignInContainer: =AlignInContainer.SetByContainer
                     FillPortions: =0
                     Height: =If(App.Width > 600, 60, 120)
                     LayoutAlignItems: =LayoutAlignItems.Center
@@ -182,7 +181,7 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 2,  Parent.Width)
+                        Width: =If(App.Width > 600, Parent.Width / 2,  Parent.Width - 42)
                         ZIndex: =1
 
                         dd_Status As Dropdown.pcfdataset:
@@ -242,7 +241,8 @@
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width)
+                        Width: =If(App.Width > 600, Parent.Width / 2, Parent.Width - 42)
+                        Y: =If(App.Width > 600, 0, Parent.Height / 2)
                         ZIndex: =2
 
                         dd_FileType As Dropdown.pcfdataset:
