--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -242,8 +242,8 @@
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
                         Width: =If(App.Width > 600, Parent.Width / 2 - 42, Parent.Width)
-                        X: =If(App.Width > 600, Parent.Width / 2, 0)
-                        Y: =If(App.Width > 600, 0, 50 + 10)
+                        X: =If(App.Width > 600, Parent.Width / 2 + 5, 0)
+                        Y: =If(App.Width > 600, 0, 60)
                         ZIndex: =2
 
                         dd_FileType As Dropdown.pcfdataset:
@@ -399,8 +399,8 @@
                         PaddingRight: =5
                         PaddingTop: =5
                         Width: =32
-                        X: =If(App.Width > 600, Parent.Width - 32 - 5, Parent.Width - 32 - 5)
-                        Y: =If(App.Width > 600, (50 - 32) / 2, 2 * 50 + 20)
+                        X: =If(App.Width > 600, Parent.Width - 42, Parent.Width - 42)
+                        Y: =If(App.Width > 600, (50 - 32) / 2, 110)
                         ZIndex: =3
 
                     ButtonCanvas1 As Button:
