--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -540,6 +540,7 @@
 
         TextCanvas2 As Text:
             DisplayMode: =DisplayMode.Edit
+            FontColor: =
             Height: =32
             LayoutMinHeight: =32
             LayoutMinWidth: =96
