--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -320,7 +320,7 @@
                                         }
                                     )
                                 );
-                            Width: =585
+                            Width: =Parent.Width
                             X: =0
                             Y: =0
                             ZIndex: =1
